# inflex-sganfin

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/inflex_sganfin/: main.py  test_table.yaml
src/inflex_sganfin/data/: series.py
src/inflex_sganfin/representations/: table.py
